--- a/src/front/package.json
+++ b/src/front/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "front",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "classnames": "^2.5.1",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwindcss-animation-delay": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
