--- a/src/front/package.json
+++ b/src/front/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.1",
+    "@aws-amplify/ui-react": "^6.1.14",
+    "aws-amplify": "^6.4.3",
     "classnames": "^2.5.1",
     "next": "14.2.4",
     "react": "^18",
