--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.150.0-alpha.0",
     "aws-cdk-lib": "^2.149.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
