--- a/src/front/package.json
+++ b/src/front/package.json
@@ -13,8 +13,10 @@
     "aws-amplify": "^6.4.3",
     "classnames": "^2.5.1",
     "next": "14.2.4",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-stripe-checkout": "^2.6.3",
     "tailwindcss-animation-delay": "^1.2.0"
   },
   "devDependencies": {
